--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ng-marketplace",
+	"name": "marketplace",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -19,7 +19,6 @@
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"express-session": "^1.17.1",
 		"helmet": "^3.22.0",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.26.0",
@@ -29,10 +28,7 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
 		"passport": "^0.4.1",
-		"passport-cookie": "^1.0.6",
 		"passport-jwt": "^4.0.0",
-		"passport-jwt-cookiecombo": "^1.0.5",
-		"passport-local": "^1.0.0",
 		"slug": "^3.3.0",
 		"validator": "^13.0.0"
 	},
